@@ -77,6 +77,8 @@
 	- rpmio: add RPMURL_SERVER_* server capability flags.
 	- fix: report "not installed" for pkg.bogusarch (#124016).
 	- don't treat '?' as a glob character in http URI's (#143885).
+	- rewrite macroized interpreter test to avoid %verifyscript segfault.
+	- display the verifyscript interpreter with --scripts.
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
